--- a/Views/page/about.ejs
+++ b/Views/page/about.ejs
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="csrf-token" content="<%= csrfToken %>">
-  <title>register</title>
+  <title>about</title>
   <%- include('../layouts/styles'); %>
 </head>
 
 <body>
-  <h1>user register page</h1>
+  <h1>about page</h1>
 
-  <nav>
+	<nav>
 		<ul>
 			<li><a href="/">home</a></li>
 			<li><a href="/about">about us</a></li>
@@ -26,26 +26,7 @@
       </form>
 		</ul>
   </nav>
-
-  <main>
-    <div>
-      <%_ if (locals.flash.errors) { _%>
-        <%_ for (error of locals.flash.errors) { _%>
-          <%= error.msg; %>
-        <%_ } _%>
-      <%_ } _%>
-      <% if (locals.flash.success == 201) { %>
-        <h2>register successful</h2>
-      <% } %>
-    </div>
-    <form action="/register" method="post">
-      <input type="hidden" name="_csrf" value="<%= csrfToken; %>">
-      E-mail: <input type="email" name="email" id="email"><br>
-      Password: <input type="password" name="password" id="password"><br>
-      <button type="submit">Register</button>
-    </form>
-  </main>
-
+  
   <%- include('../layouts/scripts'); %>
 </body>
 
