--- a/Views/user/profile-index.ejs
+++ b/Views/user/profile-index.ejs
@@ -16,6 +16,7 @@
   <nav>
 		<ul>
 			<li><a href="/">home</a></li>
+			<li><a href="/about">about us</a></li>
 			<li><a href="/login">login</a></li>
 			<li><a href="/register">register</a></li>
       <li><a href="/profile">profile</a></li>
