--- a/Views/auth/register.ejs
+++ b/Views/auth/register.ejs
@@ -2,51 +2,52 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="csrf-token" content="<%= csrfToken %>">
-  <title>register</title>
-  <%- include('../layouts/styles'); %>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta name="csrf-token" content="<%= csrfToken %>">
+	<title>register</title>
+	<%- include('../layouts/styles'); %>
 </head>
 
 <body>
-  <h1>user register page</h1>
 
-  <nav>
-		<ul>
-			<li><a href="/">home</a></li>
-			<li><a href="/about">about us</a></li>
-			<li><a href="/login">login</a></li>
-			<li><a href="/register">register</a></li>
-      <li><a href="/profile">profile</a></li>
-      <form action="/logout/?_method=DELETE" method="post">
-        <input type="hidden" name="_csrf" value="<%= csrfToken; %>">
-        <button type="submit">logout</button>
-      </form>
-		</ul>
-  </nav>
+	<%- include('../layouts/nav'); %>
+	
+	<div class="jumbotron jumbotron-fluid">
+		<div class="container">
+			<h1 class="display-4">user register page</h1>
+		</div>
+	</div>
 
-  <main>
-    <div>
-      <%_ if (locals.flash.errors) { _%>
-        <%_ for (error of locals.flash.errors) { _%>
-          <%= error.msg; %>
-        <%_ } _%>
-      <%_ } _%>
-      <% if (locals.flash.success == 201) { %>
-        <h2>register successful</h2>
-      <% } %>
-    </div>
-    <form action="/register" method="post">
-      <input type="hidden" name="_csrf" value="<%= csrfToken; %>">
-      E-mail: <input type="email" name="email" id="email"><br>
-      Password: <input type="password" name="password" id="password"><br>
-      <button type="submit">Register</button>
-    </form>
-  </main>
+	<main class="container">
+		<div>
+			<%_ if (locals.flash.errors) { _%>
+				<%_ for (error of locals.flash.errors) { _%>
+					<%= error.msg; %>
+				<%_ } _%>
+			<%_ } _%>
+			<%_ if (locals.flash.success == 201) { _%>
+				<h2>register successful</h2>
+			<%_ } _%>
+		</div>
 
-  <%- include('../layouts/scripts'); %>
+		<form action="/register" method="post">
+			<input type="hidden" name="_csrf" value="<%= csrfToken; %>">
+			<div class="form-group">
+				<label for="email">Email address</label>
+				<input type="email" name="email" class="form-control" id="email">
+				<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+			</div>
+			<div class="form-group">
+				<label for="password">Password</label>
+				<input type="password" name="password" class="form-control" id="password">
+			</div>
+			<button type="submit" class="btn btn-primary">Register</button>
+		</form>
+	</main>
+
+	<%- include('../layouts/scripts'); %>
 </body>
 
 </html>
